# Lab2

./: CMakeLists.txt  GUI.cpp  GUI.h  Person.h  Randomizer.cpp  Randomizer.h  data.txt  main.cpp
PrevLabsContent/: ArraySequence.h  DynamicArray.h  Sequence.h
Sorts/: BubbleSort.h  ISorter.h  QuickSort.h  ShakerSort.h
Tests/: FuncTests.cpp  FuncTests.h  LoadTests.cpp  LoadTests.h  OutputManager.h  PersonManualTests.cpp  PersonManualTests.h
